[gd_scene load_steps=10 format=3 uid="uid://bbdleesf2in24"]

[ext_resource type="Script" path="res://animated_player.gd" id="1_3mhga"]
[ext_resource type="Texture2D" uid="uid://cjfbasl7eygp0" path="res://Sprites/Characters/character_0002.png" id="2_5gcdn"]
[ext_resource type="Texture2D" uid="uid://c3nvqgsbwhv3a" path="res://Sprites/Characters/character_0004.png" id="2_o70pv"]
[ext_resource type="Texture2D" uid="uid://it0winbn5i7q" path="res://Sprites/Characters/character_0003.png" id="3_58ngw"]
[ext_resource type="Texture2D" uid="uid://drk78cnbenmuq" path="res://Sprites/Characters/character_0005.png" id="5_yu8q5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4s2mh"]
radius = 11.0
height = 24.0

[sub_resource type="LabelSettings" id="LabelSettings_wpcrh"]
font_size = 48
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mes2k"]
font_size = 48
outline_size = 5
outline_color = Color(0.000693898, 0.000693898, 0.000693898, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_pje4h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5gcdn")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_o70pv")
}],
"loop": true,
"name": &"idle_summer",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5gcdn")
}, {
"duration": 1.3,
"texture": ExtResource("3_58ngw")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_o70pv")
}, {
"duration": 1.3,
"texture": ExtResource("5_yu8q5")
}],
"loop": true,
"name": &"run_summer",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D" groups=["Player"]]
position = Vector2(-14, -1)
script = ExtResource("1_3mhga")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_4s2mh")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(8, -13)
zoom = Vector2(3, 3)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreText" type="Label" parent="CanvasLayer"]
offset_left = 26.0
offset_top = 17.0
offset_right = 206.0
offset_bottom = 84.0
text = "Score: 0"
label_settings = SubResource("LabelSettings_wpcrh")

[node name="TimeText" type="Label" parent="CanvasLayer"]
offset_left = 793.0
offset_top = 20.0
offset_right = 1133.0
offset_bottom = 87.0
text = "Elapsed Time: 0"
label_settings = SubResource("LabelSettings_mes2k")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pje4h")
animation = &"run"

[node name="GameTimer" type="Timer" parent="."]
